unpackaged/main/default/objects/Consultant__c/Consultant__c.object-meta.xml
<CustomObject>
    <label>Consultant</label>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Consultant No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>