unpackaged/main/default/objects/Consultant__c/fields/AffiniPay_ID__c.field-meta.xml
<CustomField>
    <fullName>AffiniPay_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used for legacy migration purposes only</inlineHelpText>
    <label>AffiniPay ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>