unpackaged/main/default/objects/Consultant__c/fields/Consultant_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Type__c</fullName>
    <label>Consultant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Certified Consultant</fullName>
            </value>
            <value>
                <fullName>IT Consultant</fullName>
            </value>
            <value>
                <fullName>Integration Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>