unpackaged/main/default/objects/Consultant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person who is a consultant for the partner under this partnership agreement</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultants</relationshipLabel>
    <relationshipName>Consultants</relationshipName>
    <type>Lookup</type>
</CustomField>